web/client/themes/default/less/annotations.less
#mapstore-annotations-info-viewer-edit-buttons {
    float: right;
}
/*
.mapstore-annotations-info-viewer .col-xs-7, .mapstore-annotations-info-viewer .col-xs-5, .mapstore-annotations-info-viewer .row {
    padding: 0;
}*/

.mapstore-annotations-info-viewer .ql-snow .ql-stroke {
    stroke: @ms2-color-text;
}

.mapstore-annotations-info-viewer .ql-snow .ql-picker {
    color: @ms2-color-text;
}

.mapstore-annotations-info-viewer-marker {
    float: left;
    margin-top: 10px;
    margin-bottom: 10px;
    margin-right: 5px;
    cursor: pointer;
}

.mapstore-annotations-info-viewer-marker-selected {
    border: solid red 2px;
}

.mapstore-annotations-info-viewer-styler {
    min-height: 600px;
    .mapstore-switch-panel {
        .shadow-soft;
        border: none;
        padding: 8px;
    }
    .mapstore-annotations-info-viewer-styler-container {
        .ms2-border-layout-content {
            overflow: auto;
        }
    }

    .ms-style {
        .Select {
            border-radius: 0;
            > * {
                border-radius: 0;
            }
            width: 100%;
            margin: 0;
        }
        .Select-menu-outer {
            z-index: 10;
            .shadow-soft;
        }
        .row {
            display: flex;
            align-items: center;
        }
    }
}


.mapstore-annotations-info-viewer-styler .Select {
    clear: both;
    margin-top: 10px;
    margin-bottom: 10px;
    width: 50%;
    margin-left: auto;
    margin-right: auto;
}

#mapstore-annotations-panel {
    margin-bottom: 0;
}
#mapstore-annotations-panel .items-list.row {
    margin-left: 5px;
    margin-right: 5px;
}


#mapstore-annotations-panel .mapstore-side-card:hover {
    .shadow;
}

.mapstore-annotations-panel-cards {
    height: ~'calc(100% - 50px)';
    overflow: auto;
}

.mapstore-annotations-panel {
    height: 100%;
}

.mapstore-annotations-panel-card-thumbnail {
    display: inline-block;
    float: left;
    width: 40px;
    height: 100%;
    padding-top: 15px;
}

.extra-marker .marker-selected:after {
    font-family: 'mapstore2';
    content: '\e165';
    position: absolute;
    top: -18px;
    left: 8px;
    font-size: 18px;
    color: purple;
    text-shadow: 2px 0 0 #fff, -2px 0 0 #fff, 0 2px 0 #fff, 0 -2px 0 #fff, 1px 1px #fff, -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff;
}

.mapstore-annotations-info-viewer .ql-editor {
    max-height: 500px;
    min-height: 180px;
}

#mapstore-annotations-panel .mapstore-annotations-info-viewer {
    height: 100%;
}
#mapstore-annotations-panel .ms2-border-layout-body {
    height: 100%;
}

#mapstore-annotations-panel .ms2-border-layout-body {
    overflow: hidden !important;
}

.mapstore-annotations-info-viewer-marker-group {
    clear: both;
}

.mapstore-right-panel .ql-tooltip, #mapstore-annotations-panel .ql-tooltip {
    left: 0 !important;
    top: 0 !important;
}

.mapstore-annotations-info-viewer-items {
    margin-top: 10px;
    height: ~'calc(100% - 50px)';
    overflow: auto;
}

.mapstore-right-panel .react-swipeable-view-container > div {
    position: relative;
    height: 100%;
}

.mapstore-right-panel .react-swipeable-view-container .panel.panel-default {
    max-height: 100% !important;
    height: 100%;
    position: absolute;
}
.mapstore-right-panel .react-swipeable-view-container .panel.panel-default .panel-body {
    height: ~'calc(100% - 60px)';
}

.mapstore-right-panel .mapstore-json-viewer, .mapstore-right-panel .mapstore-annotations-info-viewer {
    height: 100%;
}
/*
.mapstore-annotations-panel-card-title, .mapstore-annotations-info-viewer-title label  {
    font-size: 20px;
    font-weight: bold;
}*/

.mapstore-annotations-panel-card-thumbnail:before {
    color: white;
    font-size: 16px;
    margin-left: 8px;
    margin-left: 8px;
    display: block;
    margin-top: -7px;
}

.mapstore-annotations-panel .form-group .input-group .input-group-addon {
    position: absolute;
    z-index: 2;
    right: 0;
    border-color: transparent;
    background-color: transparent;
}

.mapstore-annotations-panel .form-group .input-group {
    width: 100%;
    margin-top: 10px;
}

.extra-marker {
    cursor: inherit;
}

.annotations-edit-error {
    color: red;
}

.mapstore-annotations-info-viewer > .annotations-edit-error {
    height: 22px;
    border-bottom: solid 1px #ddd;
    margin-bottom: 10px;
}

.ql-disabled {
    background-color: #ddd;
}

.mapstore-annotations-info-viewer-buttons {
    min-height: 45px;
    .shadow-soft
}


// ANNOTATIONS ADDITION -- JAN 2018
.ms-annotations-panel {
    .form-group {
        margin: 0;
    }
    .ms-header {
        z-index: 10;
        .row {
            margin-bottom: 15px;
            &:first-child {
                padding: 0;
                display: flex;
                .col-xs-2 {
                    padding: 0;
                    width: auto;
                }
                .col-xs-8 {
                    flex: 1;
                    padding: 0;
                    align-self: center;
                    text-align: center;
                }
            }
        }
        .shadow-soft;

        .ms-style-header {
            padding: 0;
            .col-xs-12 {
                padding: 0;
            }
        }
    }

    .ms2-border-layout-content {
        .row {
            &:first-child {
                margin-top: 8px;
            }
            margin-bottom: 8px;
        }
        .noTopMargin.row {
            &:first-child {
                margin-top: 0px;
            }
        }

        .msSideGrid {
            height: ~'calc(100% - 161px)';
            overflow: auto;
            margin: 0 30px;
            .mapstore-side-preview {
                display: flex;
                & > span {
                    font-size: @icon-size * 2;
                    margin: auto;
                }
            }
            .mapstore-side-card-desc {
                height: @square-btn-size;
                overflow: hidden;
            }
        }

        .ms-preview {
            flex: 1;
            display: flex;
            height: 100%;
            flex-direction: column;
            h4 {
                border-bottom: 1px solid @ms2-color-shade-lighter;
            }
            .ql-editor {
                padding-top: 0;
                padding-bottom: 0;
            }
            .row {
                &:last-child {
                    flex: 1;
                    overflow-y: auto;
                    margin-bottom: 0;
                }
            }
        }

        .ms-edit {
            flex: 1;
            display: flex;
            height: 100%;
            flex-direction: column;
            .row {
                &:last-child {
                    flex: 1;
                    overflow-y: auto;

                    flex: 1;
                    display: flex;
                    flex-direction: column;

                    #ms-ann-description-editor {
                        flex: 1;
                        display: flex;
                        .quill  {
                            flex: 1;
                            display: flex;
                            flex-direction: column;
                            .ql-container {
                                flex: 1;
                                overflow-y: auto;
                            }
                        }
                    }
                }
            }
        }
    }
}
.mapstore-annotations-info-viewer-item.mapstore-annotations-info-viewer-description {
    .quill {
        overflow: -webkit-paged-y;
    }
}

.ms-color-selector {
    overflow: hidden;
    height: @square-btn-medium-size;
    width: 100%;
    .shadow-soft;

    & > div {
        float: left;
        margin: 4px;
        height: @square-btn-medium-size - 8px;
        width: ~"calc(100% - @{square-btn-medium-size} - 8px)";
        background-image: linear-gradient(45deg, #dddddd 25%, transparent 25%), linear-gradient(-45deg, #dddddd 25%, transparent 25%), linear-gradient(45deg, transparent 75%, #dddddd 75%), linear-gradient(-45deg, transparent 75%, #dddddd 75%);
        background-size: 24px 24px;
        background-position: 0 0, 0 12px, 12px -12px, -12px 0px;
    }

    .cp-swatch {
        box-shadow: none;
        height: @square-btn-medium-size - 8px;
        width: 100%;

        padding: 0;
        border-radius: 0;
        min-height: 0;

    }

    .cp-popover {
        display: flex;
        width: 100%;
        height: 100%;
        top: 0;
        right: 0;
        background-color: rgba(0,0,0,0.2);
        .cp-cover {
            width: 100%;
            height: 100%;
            position: absolute;
            top: 0;
            left: 0;
        }
        .sketch-picker {
            margin: auto;
        }
    }

    span {
        float: right;
        font-size: @icon-size-md;
        padding: @padding-left-square-md;
    }
}


.mapstore-annotations-info-viewer .quill .ql-container {
    min-height: 180px
}

// TODO MOVE THIS TO A PROEPR LESS FILE
.ms-thumb-geom {
    svg {
        margin: auto;
    }
    width: @square-btn-size;
    height: @square-btn-size;
}


.mapstore-annotations-info-viewer-items .col-xs-6 .btn-group {
    span button:nth-child(2) {
        background-color: transparent;
        cursor: auto;
    }
}

.mapstore-annotations-info-viewer .container-fluid .container-fluid .row {

    .row:hover{
        cursor: pointer;

        input, select, .col-xs-5 span {
            color: @ms2-color-primary;
        }

    }
}

.ms-dragg.ms-below .coordinateRow, .ms-dragg.ms-above .coordinateRow {

    &{
        background-color: @ms2-color-background
    }
    &:hover{
        cursor: pointer;

        input, select, .col-xs-5 span {
            color: @ms2-color-primary;
        }

    }
}

.mapstore-identify-viewer {
    .mapstore-annotations-info-viewer {
        .mapstore-annotations-info-viewer-buttons {
            -webkit-box-shadow: none;
            box-shadow: none;
        }
    }
    .mapstore-annotations-info-viewer.hover-background:hover {
        background: @ms2-color-shade-super-lighter;
    }
    .mapstore-annotations-info-viewer+.mapstore-annotations-info-viewer {
        .mapstore-annotations-info-viewer-buttons {
            border-top: 1px solid @ms2-color-shade-lighter;
            padding-top: 5px;
            margin-top: 5px;
        }
    }
}


.coordinateRow {
    display: flex;
    align-items: center;
    box-sizing: border-box;
    border: 1px solid @ms2-color-shade-lighter;
    margin: 8px 15px !important;
    font-family: @font-family-monospace;
    .col-xs-5, .col-xs-1 {
        padding: 0;
        float: unset;
        width: auto;
        margin: 0 4px;
    }
    .form-group {
        width: 100%;
    }
    .col-xs-5 {
        flex: 1;
        .form-group {
            margin: 4px 0;
        }
    }
    input {
        font-size: @font-size-small;
    }
    .glyphicon-menu-hamburger {
        width: 10px;
        overflow: hidden;
    }
}

.ms-dragging {
    opacity: 0.5;
}

.ms-over {
    box-sizing: border-box;
    .coordinateRow {
        border: 1px dashed @ms2-color-primary;
    }
    &.ms-above {
        .coordinateRow {
            border-bottom-width: 2px;
        }

    }
    &.ms-below {
        .coordinateRow {
            border-top-width: 2px;
        }
    }
    &.ms-dragging {
        .coordinateRow {
            border: 1px dashed @ms2-color-shade-lighter;
        }
    }
}

.modal-dialog-container{
    border: none;
}

